; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_port.c_sas_porte_bytes_dmaed.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_port.c_sas_porte_bytes_dmaed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }
%struct.asd_sas_event = type { %struct.asd_sas_phy* }
%struct.asd_sas_phy = type { i32 }

@PORTE_BYTES_DMAED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sas_porte_bytes_dmaed(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  %3 = alloca %struct.asd_sas_event*, align 8
  %4 = alloca %struct.asd_sas_phy*, align 8
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  %5 = load %struct.work_struct*, %struct.work_struct** %2, align 8
  %6 = call %struct.asd_sas_event* @to_asd_sas_event(%struct.work_struct* %5)
  store %struct.asd_sas_event* %6, %struct.asd_sas_event** %3, align 8
  %7 = load %struct.asd_sas_event*, %struct.asd_sas_event** %3, align 8
  %8 = getelementptr inbounds %struct.asd_sas_event, %struct.asd_sas_event* %7, i32 0, i32 0
  %9 = load %struct.asd_sas_phy*, %struct.asd_sas_phy** %8, align 8
  store %struct.asd_sas_phy* %9, %struct.asd_sas_phy** %4, align 8
  %10 = load i32, i32* @PORTE_BYTES_DMAED, align 4
  %11 = load %struct.asd_sas_phy*, %struct.asd_sas_phy** %4, align 8
  %12 = getelementptr inbounds %struct.asd_sas_phy, %struct.asd_sas_phy* %11, i32 0, i32 0
  %13 = call i32 @clear_bit(i32 %10, i32* %12)
  %14 = load %struct.asd_sas_phy*, %struct.asd_sas_phy** %4, align 8
  %15 = call i32 @sas_form_port(%struct.asd_sas_phy* %14)
  ret void
}

declare dso_local %struct.asd_sas_event* @to_asd_sas_event(%struct.work_struct*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @sas_form_port(%struct.asd_sas_phy*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
